fix: fix z-index of mobile nav

--- a/src/styles/modules/mobileNav.module.scss
+++ b/src/styles/modules/mobileNav.module.scss
@@ -5,6 +5,7 @@
   top: 0;
   bottom: 0;
   left: -100%;
+  z-index: 3;
   display: none;
   flex-direction: column;
   align-items: center;
